Get repo in order and running with environment variables

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "scripts": {
     "dev": "gatsby develop",
+    "serve": "gatsby build && NODE_ENV=production gatsby serve",
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
