--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,54 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
 node_modules/
-public
-.gatsby-context.js
+
+# Typescript v1 declaration files
+typings/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# IDE
+.idea/*
+*.iml
+*.sublime-*
+
+# OSX
 .DS_Store
-.intermediate-representation/
+.vscode
+
+# Gatsby
 .cache/
+public
+yarn-error.log
+.gatsby-context.js
+.intermediate-representation/
 yarn.lock
+
+# config files
+.env.*
+!.env.example
