remove real creds

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # These are all public keys, deliberately committed
-GHOST_API_URL="https://john.ghost.io"
-GHOST_API_KEY="a06745f6b3b2"
+GHOST_API_URL="<ghost url>"
+GHOST_API_KEY="<api key>"
