--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gatsby-starter-blog",
-  "description": "Starter Gatsby Blog",
+  "name": "gatsby-starter-ghost-blog",
+  "description": "Starter Gatsby Ghost Blog",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "David Darnes <me@daviddarnes.com>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
+    "url": "https://github.com/daviddarnes/gatsby-starter-ghost-blog/issues"
   },
   "dependencies": {
     "gatsby": "^2.0.19",
@@ -40,7 +40,7 @@
     "gh-pages": "^1.2.0",
     "prettier": "^1.14.2"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://github.com/daviddarnes/gatsby-starter-ghost-blog#readme",
   "keywords": [
     "gatsby"
   ],
@@ -48,7 +48,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/daviddarnes/gatsby-starter-ghost-blog.git"
   },
   "scripts": {
     "dev": "gatsby develop",
